// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component action negative 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
            data-style="fogtf9-6gd0e6 fogtf9-xe265e fogtf9-1qr77c8 fogtf9-5n5obt fogtf9-18jpc09"
            dir={null}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="css-text-1rynq56"
<<<<<<< HEAD
              data-style="727xeq-10883ij 1wk4vs8-1434m67 1wk4vs8-1vrz3gw 1wk4vs8-11hczkh 1wk4vs8-197pp75"
=======
              data-style="15yy052-4du8hr fogtf9-k554we fogtf9-1vrz3gw fogtf9-11hczkh fogtf9-197pp75"
>>>>>>> ca9ba24a1934e8abde68f43d943c25ddf55049b7
              dir="auto"
            >
              Button
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component action positive 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
            data-style="fogtf9-6gd0e6 fogtf9-lxtrsj fogtf9-1qr77c8 fogtf9-5n5obt fogtf9-15m3xlk"
            dir={null}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="css-text-1rynq56"
<<<<<<< HEAD
              data-style="727xeq-10883ij 1wk4vs8-1434m67 1wk4vs8-3noqo9 1wk4vs8-11hczkh 1wk4vs8-1tthglh"
=======
              data-style="15yy052-4du8hr fogtf9-k554we fogtf9-3noqo9 fogtf9-11hczkh fogtf9-1tthglh"
>>>>>>> ca9ba24a1934e8abde68f43d943c25ddf55049b7
              dir="auto"
            >
              Button
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component action primary 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
            data-style="fogtf9-6gd0e6 fogtf9-58zsu5 fogtf9-1qr77c8 fogtf9-5n5obt fogtf9-upz7x2"
            dir={null}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="css-text-1rynq56"
<<<<<<< HEAD
              data-style="727xeq-10883ij 1wk4vs8-1434m67 1wk4vs8-7s6zs0 1wk4vs8-11hczkh 1wk4vs8-1b07oxx"
=======
              data-style="15yy052-4du8hr fogtf9-k554we fogtf9-7s6zs0 fogtf9-11hczkh fogtf9-1b07oxx"
>>>>>>> ca9ba24a1934e8abde68f43d943c25ddf55049b7
              dir="auto"
            >
              Button
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component action secondary 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k 896xuz-1q64x7k n7aciq-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0 yljpgc-5lm9f0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k 896xuz-1q64x7k n7aciq-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0 yljpgc-5lm9f0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0 wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
            data-style="fogtf9-6gd0e6 fogtf9-8r4mg3 fogtf9-1qr77c8 fogtf9-5n5obt fogtf9-14bfgb fogtf9-6gd0e6 fogtf9-8r4mg3 fogtf9-1qr77c8 fogtf9-5n5obt fogtf9-14bfgb"
            dir={null}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="css-text-1rynq56"
<<<<<<< HEAD
              data-style="727xeq-10883ij 1wk4vs8-1434m67 1wk4vs8-1wt7l86 1wk4vs8-11hczkh 1wk4vs8-1xgarii"
=======
              data-style="15yy052-4du8hr 15yy052-4du8hr fogtf9-k554we fogtf9-1wt7l86 fogtf9-11hczkh fogtf9-1xgarii fogtf9-k554we fogtf9-1wt7l86 fogtf9-11hczkh fogtf9-1xgarii"
>>>>>>> ca9ba24a1934e8abde68f43d943c25ddf55049b7
              dir="auto"
            >
              Button
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component size lg 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
            data-style="fogtf9-6gd0e6 fogtf9-58zsu5 fogtf9-1qr77c8 fogtf9-168ejle fogtf9-upz7x2"
            dir={null}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="css-text-1rynq56"
<<<<<<< HEAD
              data-style="727xeq-10883ij 1wk4vs8-1434m67 1wk4vs8-7s6zs0 1wk4vs8-1n3pgep 1wk4vs8-1b07oxx"
=======
              data-style="15yy052-4du8hr fogtf9-k554we fogtf9-7s6zs0 fogtf9-16we7vb fogtf9-1b07oxx"
>>>>>>> ca9ba24a1934e8abde68f43d943c25ddf55049b7
              dir="auto"
            >
              Button
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component size md 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
            data-style="fogtf9-6gd0e6 fogtf9-58zsu5 fogtf9-1qr77c8 fogtf9-5n5obt fogtf9-upz7x2"
            dir={null}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="css-text-1rynq56"
<<<<<<< HEAD
              data-style="727xeq-10883ij 1wk4vs8-1434m67 1wk4vs8-7s6zs0 1wk4vs8-11hczkh 1wk4vs8-1b07oxx"
=======
              data-style="15yy052-4du8hr fogtf9-k554we fogtf9-7s6zs0 fogtf9-11hczkh fogtf9-1b07oxx"
>>>>>>> ca9ba24a1934e8abde68f43d943c25ddf55049b7
              dir="auto"
            >
              Button
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component size sm 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
            data-style="fogtf9-6gd0e6 fogtf9-58zsu5 fogtf9-1qr77c8 fogtf9-k1vcwv fogtf9-upz7x2"
            dir={null}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="css-text-1rynq56"
<<<<<<< HEAD
              data-style="727xeq-10883ij 1wk4vs8-1434m67 1wk4vs8-7s6zs0 1wk4vs8-1q2dyj6 1wk4vs8-1b07oxx"
=======
              data-style="15yy052-4du8hr fogtf9-k554we fogtf9-7s6zs0 fogtf9-1q2dyj6 fogtf9-1b07oxx"
              dir="auto"
            >
              Button
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component size xl 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
            data-style="fogtf9-6gd0e6 fogtf9-58zsu5 fogtf9-1qr77c8 fogtf9-5kwyn3 fogtf9-upz7x2"
            dir={null}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="css-text-1rynq56"
              data-style="15yy052-4du8hr fogtf9-k554we fogtf9-7s6zs0 fogtf9-1cd3x4v fogtf9-1b07oxx"
>>>>>>> ca9ba24a1934e8abde68f43d943c25ddf55049b7
              dir="auto"
            >
              Button
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component size xs 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
            data-style="fogtf9-6gd0e6 fogtf9-58zsu5 fogtf9-1qr77c8 fogtf9-14msekw fogtf9-upz7x2"
            dir={null}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="css-text-1rynq56"
<<<<<<< HEAD
              data-style="727xeq-10883ij 1wk4vs8-1434m67 1wk4vs8-7s6zs0 1wk4vs8-193yier 1wk4vs8-1b07oxx"
=======
              data-style="15yy052-4du8hr fogtf9-k554we fogtf9-7s6zs0 fogtf9-7r3sa2 fogtf9-1b07oxx"
>>>>>>> ca9ba24a1934e8abde68f43d943c25ddf55049b7
              dir="auto"
            >
              Button
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component variant link 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
            data-style="fogtf9-6gd0e6 fogtf9-58zsu5 fogtf9-q0taf9 fogtf9-5n5obt fogtf9-n2zv0u"
            dir={null}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="css-text-1rynq56"
<<<<<<< HEAD
              data-style="727xeq-10883ij 1wk4vs8-1434m67 1wk4vs8-7s6zs0 1wk4vs8-11hczkh"
=======
              data-style="15yy052-4du8hr fogtf9-k554we fogtf9-7s6zs0 fogtf9-11hczkh"
>>>>>>> ca9ba24a1934e8abde68f43d943c25ddf55049b7
              dir="auto"
            >
              Button
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component variant outline 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
            data-style="fogtf9-6gd0e6 fogtf9-58zsu5 fogtf9-ha1mj1 fogtf9-5n5obt fogtf9-4s28py"
            dir={null}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="css-text-1rynq56"
<<<<<<< HEAD
              data-style="727xeq-10883ij 1wk4vs8-1434m67 1wk4vs8-7s6zs0 1wk4vs8-11hczkh"
=======
              data-style="15yy052-4du8hr fogtf9-k554we fogtf9-7s6zs0 fogtf9-11hczkh"
>>>>>>> ca9ba24a1934e8abde68f43d943c25ddf55049b7
              dir="auto"
            >
              Button
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button component variant solid 1`] = `
<div
  className="css-view-175oi2r"
  data-style="896xuz-1q64x7k n7aciq-1q64x7k"
  dir={null}
>
  <div
    className="css-view-175oi2r"
    data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
    dir={null}
  >
    <div
      className="css-view-175oi2r"
      data-style="896xuz-1q64x7k n7aciq-1q64x7k"
      dir={null}
    >
      <div
        className="css-view-175oi2r"
        data-style="wj8veg-1hh0pc0 yljpgc-5lm9f0"
        dir={null}
      >
        <div
          className="css-view-175oi2r"
          data-style="wj8veg-1hh0pc0"
          dir={null}
        >
          <div
            className="css-view-175oi2r r-cursor-1loqt21 r-touchAction-1otgn73"
            data-style="fogtf9-6gd0e6 fogtf9-58zsu5 fogtf9-1qr77c8 fogtf9-5n5obt fogtf9-upz7x2"
            dir={null}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="css-text-1rynq56"
<<<<<<< HEAD
              data-style="727xeq-10883ij 1wk4vs8-1434m67 1wk4vs8-7s6zs0 1wk4vs8-11hczkh 1wk4vs8-1b07oxx"
=======
              data-style="15yy052-4du8hr fogtf9-k554we fogtf9-7s6zs0 fogtf9-11hczkh fogtf9-1b07oxx"
>>>>>>> ca9ba24a1934e8abde68f43d943c25ddf55049b7
              dir="auto"
            >
              Button
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
